<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SharingActivity"
    android:id="@+id/layoutRoot"
    >

    <ImageView
        android:id="@+id/icShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvTitleSharePhotos"
        app:layout_constraintVertical_chainStyle="packed"
        android:src="@drawable/ic_share_outline_56"
        android:tint="@color/gray_icon"
        />

    <TextView
        android:id="@+id/tvTitleSharePhotos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icShare"
        app:layout_constraintBottom_toTopOf="@+id/tvDescriptionSharePhotos"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/title_share_photos"
        />

    <TextView
        android:id="@+id/tvDescriptionSharePhotos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSharePhotos"
        app:layout_constraintBottom_toTopOf="@+id/btnSelectPhoto"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@color/gray_text"
        android:textSize="16sp"
        android:text="@string/description_share_photos"
        />

    <Button
        android:id="@+id/btnSelectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionSharePhotos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:text="@string/btn_select_photo"
        style="@style/AppTheme.Button.Blue"
        />

</androidx.constraintlayout.widget.ConstraintLayout>